# authsys-demo

./: README.md  main.py  pyproject.toml
authsys_demo/: crud.py  database.py  models.py  schemas.py
tests/: test_authsys_demo.py  test_main.py  test_users.py
