[tool.poetry]
name = "authsys-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.32"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.940"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
